tests/snapshots/test_runner__tests__compiler__typecheck__record_update_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let a = { x: 2 }
  let b = a.{ x: "hi" } # expected Integer, got String
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_2.kk:3:18
  │
3 │   let b = a.{ x: "hi" } # expected Integer, got String
  │                  ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
